--- a/src/pages/DashboardPage/components/InfoBooth/InfoBoothModal.css
+++ b/src/pages/DashboardPage/components/InfoBooth/InfoBoothModal.css
@@ -1,8 +1,10 @@
 #asset-image{
     width: 150px;
     margin-top: 10%;
+    max-height:180px;
 }
 .top{
     color:white;
-    padding-bottom:5%;
+    padding-bottom:6%;
+    height: 280px;
 }
